# mim-web-desktop-boilerplate

./: .gitignore  .gitlab-ci.yml  README.md  TODO.md  build_config.yml  make.py
cli/: __init__.py  config.py  github.py  patcher.py  pyproject.toml  requirements.txt  utils.py
projects/element-desktop/overrides/patches/: electron-builder.ts.patch  package.json.patch  yarn.lock.patch
projects/element-desktop/overrides/patches/res/img/: element.ico.patch  element.png.patch
projects/element-desktop/overrides/patches/src/: protocol.ts.patch
projects/element-web/: .env.example  Dockerfile  config.json.example
projects/element-web/overrides/MiM/css/: _Toolbar.pcss  _colors.pcss  _components.pcss
projects/element-web/overrides/MiM/css/lock-screen/: _LockScreen.pcss  _PinInput.pcss  _RemovePinDialog.pcss  _SetupPinDialog.pcss  _index.pcss
projects/element-web/overrides/MiM/src/: Toolbar.tsx
projects/element-web/overrides/MiM/src/lock-screen/: LockScreenProvider.tsx  LockScreenSettings.tsx  PinInput.tsx  RemovePinDialog.tsx  SetupPinDialog.tsx  utils.ts
projects/element-web/overrides/patches/: package.json.patch  tsconfig.json.patch  webpack.config.js.patch
projects/element-web/overrides/patches/res/: manifest.json.patch
projects/element-web/overrides/patches/res/css/: _components.pcss.patch
projects/element-web/overrides/patches/res/vector-icons/: 1024.png.patch  120.png.patch  1240x600.png.patch  150.png.patch  152.png.patch  (+22 more)
projects/element-web/overrides/patches/src/: IConfigOptions.ts.patch
projects/element-web/scripts/: replace_vars.sh  start.sh
(+74 files in other folders)
