[project]
name = "MiM-Web-CLI"
version = "1.0.0"
requires-python = "== 3.13.5"


[tool.ruff]
cache-dir = "/dev/null"
line-length = 119

[tool.ruff.lint]
select = ["F", "I", "B"]

[tool.ruff.lint.isort]
extra-standard-library = ["requests"]


[tool.mypy]
cache_dir = "/dev/null"
show_error_codes = true
# Be more strict
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# Warn everything
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
